# privacytracker

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  SECURITY.md  biome.jsonc  crowdin.yml  docker-compose.bind-mount.yml  docker-compose.yml  eslint.config.mjs  i18n.ts  instrumentation.ts  next.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  proxy.ts  renovate.json  tsconfig.json
.claude/commands/: resume.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  crowdin.yml  docker-publish.yml  macos-release.yml  nightly-live.yml  pr-preview.yml  release.yml  renovate.yml
.storybook/: main.ts  manager-head.html  preview-head.html  preview.tsx
.storybook/decorators/: themed-docs-container.tsx  with-feature-flags.tsx  with-next-intl.tsx  with-tauri-env.tsx  with-theme.tsx
.storybook/fixtures/: flags.ts  focus.ts
.storybook/messages/: en.ts  zh.ts
.storybook/stories/: Categories.mdx  DesignTokens.mdx  Introduction.mdx  Severity.mdx  _ThemeBridge.tsx
app/: globals.css  layout.tsx  not-found.tsx  page.tsx
app/about/: page.tsx
app/changelog/: page.tsx
app/components/: AboutModal.stories.tsx  AboutModal.tsx  AccessibilityFigureGlyph.stories.tsx  AccessibilityFigureGlyph.tsx  AppGrid.tsx  (+167 more)
docs/: ARCHITECTURE.md
e2e/: app-detail.spec.ts  appgrid-filters.spec.ts  audit-bundle-dedup.spec.ts  audit-bundle.spec.ts  compare-apps.spec.ts  deployment-locked.spec.ts  notifications-bell.spec.ts  onboard-import.spec.ts  onboarding-bulk-import-perf.spec.ts  onboarding-clock.spec.ts  profile-presets.spec.ts  sample-data.spec.ts  stats-page.spec.ts
lib/: accessibility-profile-server.ts  accessibility-profile.ts  accessibility-types.ts  accessibility.ts  activity.ts  age-rating-server.ts  age-rating.ts  ai-config.ts  ai-prompts.ts  annotations.ts  api-guards.ts  api-timing.ts  app-grid-meta.ts  app-import.ts  audit-bundle-import.ts  audit-bundle.ts  backup-snapshots.ts  backup.ts  changelog-types.ts  changelog.ts  chart-colors.ts  client-diagnostics.ts  compare-scrape.ts  dashboard-layout-server.ts  dashboard-layout.ts  date-format-hook.ts  date-format-server.ts  date-format.ts  db-health.ts  db-worker-client.ts  db-worker-types.ts  db-worker.cjs  db.ts  deployment-diagnostics.ts  deployment-trust.ts  desktop.ts  device-actions.ts  device-sync.ts  device.ts  devices.ts  (+81 more)
locales/: en.json  zh.json
scripts/: audit-github-settings.mjs  check-i18n-parity.mjs  ensure-standalone-stub.mjs  export-signing-assets.sh  redaction-check.mjs  stage-standalone.mjs  sync-release-version.mjs  verify-docker-attestations.mjs
src-tauri/: .gitignore  Cargo.toml  build.rs  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/permissions/autogenerated/: authenticate_touch_id.toml  check_cfgutil.toml  get_diagnostics_report.toml  list_connected_devices.toml  open_data_dir.toml  open_log_dir.toml  register_global_shortcut.toml  reveal_main_window.toml  run_cfgutil_backup.toml  run_cfgutil_export.toml  run_cfgutil_remove_app.toml  set_dock_badge.toml  set_dock_visibility.toml  set_tray_visible.toml  sidecar_base_url.toml  toggle_devtools.toml
src-tauri/resources/: standalone.tar.ready
src-tauri/resources/frontend-placeholder/: index.html
src-tauri/src/: app_menu.rs  cfgutil.rs  commands.rs  credential_key.rs  deep_link.rs  diagnostics.rs  main.rs  notifications.rs  settings.rs  shortcuts.rs  sidecar.rs  touch_id.rs  tray.rs  usb_watcher.rs  zoom.rs
storybook-static/: 1606.07d5c32e.iframe.bundle.js  1606.07d5c32e.iframe.bundle.js.map  1809.17811afe.iframe.bundle.js  1809.17811afe.iframe.bundle.js.map  2020.5720b187.iframe.bundle.js  2020.5720b187.iframe.bundle.js.map  2343.3d113324.iframe.bundle.js  246.e7ea8d20.iframe.bundle.js  246.e7ea8d20.iframe.bundle.js.map  2928.9af5e890.iframe.bundle.js  2928.9af5e890.iframe.bundle.js.map  2958.81633adf.iframe.bundle.js  2958.81633adf.iframe.bundle.js.map  3099.0b3e6e95.iframe.bundle.js  3099.0b3e6e95.iframe.bundle.js.map  34.bfad6380.iframe.bundle.js  34.bfad6380.iframe.bundle.js.map  3635.d38c0b8e.iframe.bundle.js  3635.d38c0b8e.iframe.bundle.js.map  4018.250fd802.iframe.bundle.js  4018.250fd802.iframe.bundle.js.map  4108.47b3ae93.iframe.bundle.js  4108.47b3ae93.iframe.bundle.js.map  4271.11d0f71e.iframe.bundle.js  4271.11d0f71e.iframe.bundle.js.map  4689.51a3cf37.iframe.bundle.js  4689.51a3cf37.iframe.bundle.js.map  4717.d6425f58.iframe.bundle.js  4717.d6425f58.iframe.bundle.js.map  5772.b05b48b4.iframe.bundle.js  5772.b05b48b4.iframe.bundle.js.map  5955.4e52d236.iframe.bundle.js  5955.4e52d236.iframe.bundle.js.map  5991.0e71bc5e.iframe.bundle.js  6651.9591a83e.iframe.bundle.js  6651.9591a83e.iframe.bundle.js.map  6897.1734acbe.iframe.bundle.js  6897.1734acbe.iframe.bundle.js.map  7246.bb76defe.iframe.bundle.js  7246.bb76defe.iframe.bundle.js.map  (+158 more)
tests/: accessibility-parser.test.ts  ai-config.test.ts  ai-models.test.ts  ai-policy-sample.test.ts  app-device-map.test.ts  app-import.test.ts  audit-bundle-export-route.test.ts  backup-profile-ui-smoke.test.ts  backup-snapshots.test.ts  bulk-resume.test.ts  dashboard-layout.test.ts  db-health.test.ts  db-worker-client.test.ts  deployment-diagnostics.test.ts  device-sync-api.test.ts  device-sync.test.ts  devices.test.ts  disk-usage.test.ts  error-log-ring.test.ts  feature-flags.test.ts  focus-workflow.test.ts  health-check.test.ts  import-queue.test.ts  imports-bulk.test.ts  live-apps-nightly.test.ts  live-clock-app.test.ts  notification-prefs.test.ts  onboarding-purpose.test.ts  policy-analysis-fixture.test.ts  policy-failure-cache-chunk.test.ts  policy-scrape-disabled.test.ts  policy-summary-prompt.test.ts  profile-flows.test.ts  profile-presets.test.ts  profile-setup-prompt.test.ts  rate-limit.test.ts  related-apps-observed.test.ts  release-smoke.test.ts  reset-tables.test.ts  review-queue.test.ts  (+15 more)
(+326 files in other folders)
